# gr-echo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.md  README.md
cmake/Modules/: echoConfig.cmake
docs/: README.echo
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: common.sh  constellation_map.grc  constellation_map.py  echo_classic_usrp_spy.grc  echo_classic_usrp_spy.py  echo_neural_usrp_loop.grc  echo_neural_usrp_loop.py  echo_neural_usrp_loop_nospy.grc  echo_neural_usrp_loop_nospy.py  echo_neural_usrp_spy.grc  echo_neural_usrp_spy.py  echo_single_usrp.grc  echo_single_usrp.py  echo_wrapper_classic_usrp.grc  echo_wrapper_classic_usrp.py  echo_wrapper_neural.grc  echo_wrapper_neural.py  echo_wrapper_neural_spy.grc  echo_wrapper_neural_spy.py  echo_wrapper_neural_usrp.grc  echo_wrapper_neural_usrp.py  packet_rx.grc  packet_tx.grc  run-master.sh  run-test.sh
grc/: CMakeLists.txt  echo_add_message_to_stream_async.xml  echo_demodulator_classic.xml  echo_demodulator_classic_spy.xml  echo_demodulator_neural.xml  echo_demodulator_neural_spy.xml  echo_echo_mod_demod.xml  echo_echo_packet_detect.xml  echo_echo_packet_unwrapper.xml  echo_echo_packet_wrapper.xml  echo_modulator_classic.xml  echo_modulator_classic_spy.xml  echo_modulator_neural.xml  echo_modulator_neural_spy.xml  echo_packet_handler.xml  echo_packet_length_check.xml  echo_pdu_complex_to_ettus_tagged_stream.xml  echo_preamble_insert.xml  echo_rand_zeros_extend_c.xml  echo_triggered_vector_source_b.xml  echo_watchdog.xml
include/echo/: CMakeLists.txt  api.h  pdu_complex_to_ettus_tagged_stream.h
lib/: CMakeLists.txt  pdu_complex_to_ettus_tagged_stream_impl.cc  pdu_complex_to_ettus_tagged_stream_impl.h  qa_echo.cc  qa_echo.h  test_echo.cc
misc/: analyze-log.py  analyze-run.py  apply-patches.sh  compare_errs.py  compare_src_demod.py  compare_symbs.py  echo-ctrl.py  force-sort.sh  freeze-all.sh  generate_preamble.py  make-gif.sh  packet-size.py  pretrained-analysis.ipynb  quick-ber.py  reedsolomon.patch  run-pretrained.sh  screenrc  snr-measure.ipynb  success-rate.ipynb  train-all.sh  visualize_constellations.py  zmq-bind.patch
python/: CMakeLists.txt  DSPUtil.py  EchoPacketWrapper.py  __init__.py  add_example.py  add_message_to_stream_async.py  build_utils.py  build_utils_codes.py  demodulator_classic.py  demodulator_classic_spy.py  demodulator_neural.py  demodulator_neural_spy.py  echo_mod_demod.py  echo_packet_detect.py  echo_packet_unwrapper.py  echo_packet_wrapper.py  modulator_classic.py  modulator_classic_spy.py  modulator_neural.py  modulator_neural_spy.py  packet_handler.py  packet_length_check.py  peakdetect.py  preamble_insert.py  qa_add_message_to_stream_async.py  qa_demodulator_classic.py  qa_demodulator_neural.py  qa_echo_packet_detect.py  qa_echo_packet_unwrapper.py  qa_echo_packet_wrapper.py  qa_modulator_classic.py  qa_modulator_neural.py  qa_triggered_vector_source_b.py  rand_zeros_extend_c.py  triggered_vector_source_b.py  watchdog.py
swig/: CMakeLists.txt  echo_swig.i
